Getting data from flickr

--- a/ImageViewer/Views/MainPage.xaml
+++ b/ImageViewer/Views/MainPage.xaml
@@ -9,6 +9,6 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-
+        <Button Content="Get images" Click="GetImages_Click" />
     </Grid>
 </Page>
